--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -7,3 +7,10 @@ jobs:
     steps:
       - name: My first step
         run: echo Hello, world!
+  my_npm_job:
+    name: Run npm tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install NPM packages
+      - run: npm install
+      - run: npm test
