--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -12,5 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install NPM packages
-      - run: npm install
-      - run: npm test
+        run: npm install
+      - name: Running npm test
+        run: npm test
