--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -7,6 +7,12 @@ jobs:
     steps:
       - name: My first step
         run: echo Hello, world!
+  check_directory:
+    name: Checking the file check_directory
+    runs-on: ubuntu-latest
+    steps:
+      - name: Running ls
+        run: ls -la --color --group-directories-first
   my_npm_job:
     name: Run npm tests
     runs-on: ubuntu-latest
