--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -19,6 +19,8 @@ jobs:
     name: Run npm tests
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout git
+        uses: actions/checkout@v2
       - name: Install NPM packages
         run: npm install
       - name: Running npm test
